--- a/src/styles/product.css
+++ b/src/styles/product.css
@@ -55,3 +55,44 @@
   display: flex;
   flex-direction: column;
 }
+
+.button {
+  all: unset;
+  background-color: steelblue;
+  color: white;
+  padding: 5px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.modal__overlay {
+  background-color: rgba(0, 0, 0, 0.6);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+.modal__content {
+  width: 10%;
+  background-color:white;
+  text-align: center;
+  padding: 50px 100px;
+  position: relative;
+  border-radius: 10px;
+  top: 0px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+h1 {
+  margin:0;
+}
+.hidden {
+  display: none;
+}
